src/app/scenarios/scenario-details/wizard/scenario-wizard/scenario-wizard.scss
select {
    display: block;
    border: 0px solid white;
    padding: 0px;
    width: auto;
    background-color: whitesmoke;

    &.condition-select {
        display: inline;
    }
}

.operators-select {
    display: inline;
    background-color: white;
}

.gray-bg {
    background-color: whitesmoke;
}

a {
    cursor: pointer;
    font-size:15px;
    color:#01579b;
}

.material-icons {
    cursor: pointer;
}

.icon-wrapper {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
}

.remove-wrapper {
    height: 80px;
    position: relative;
}

